# Distributed-System-Project-using-Rust

./: .gitignore  Cargo.toml  README.md
Results/agent1/: request_distribution.csv
Results/agent2/: request_distribution.csv
Results/listener1/: number_of_requests.csv
Results/listener2/: number_of_requests.csv
Results/listener3/: number_of_requests.csv
Results/tester1/: client_data0.csv  client_data1.csv  client_data10.csv  client_data100.csv  client_data101.csv  client_data102.csv  client_data103.csv  client_data104.csv  client_data105.csv  client_data106.csv  client_data107.csv  client_data108.csv  client_data109.csv  client_data11.csv  client_data110.csv  client_data111.csv  client_data112.csv  client_data113.csv  client_data114.csv  client_data115.csv  client_data116.csv  client_data117.csv  client_data118.csv  client_data119.csv  client_data12.csv  client_data120.csv  client_data121.csv  client_data122.csv  client_data123.csv  client_data124.csv  client_data125.csv  client_data126.csv  client_data127.csv  client_data128.csv  client_data129.csv  client_data13.csv  client_data130.csv  client_data131.csv  (+462 more)
agent/: Cargo.toml  request_distribution.csv
agent2/: Cargo.toml
client/: Cargo.toml  client_data.csv
client/src/: main.rs
listener/: Cargo.toml  number_of_requests.csv
listener2/: Cargo.toml  number_of_requests.csv
listener3/: Cargo.toml  number_of_requests.csv
sender/: Cargo.toml
sender2/: Cargo.toml
server/: Cargo.toml
server2/: Cargo.toml  number_of_requests.csv
server3/: Cargo.toml
test_sender_temp/: Cargo.toml  client_data.csv
(+511 files in other folders)
