[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
try-catch = "0.2.2"
tokio     = {version="0.2",features=["full"]}
csv = "1.1.6"
serde = {version = "1.0.148", features = ["derive"]}
timer = "0.2.0"
chrono="0.4.23"